<resources>
    <string name="app_name">Simple Games</string>
    <string name="username_hint">Enter username here…</string>
    <string name="player_1_username">Player 1 Username:</string>
    <string name="player_2_username">Player 2 Username:</string>
    <string name="hot_amp_cold"><![CDATA[Hot & Cold]]></string>
    <string name="hangman">Hangman</string>
    <string name="connect_4">Connect 4</string>
    <string name="accept_names">Accept names</string>

    <string name="current_score">Current score:</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="zero">0</string>
    <string name="home">Home</string>
    <string name="guess_a_number_between_0_and_20">Guess a number between 0 and 20</string>
    <string name="guess_hint">Enter your guess here…</string>
    <string name="confirm_guess">Confirm Guess</string>
    <string name="enter_your_guess">Enter your guess…</string>
    <string name="player1">Player1 </string>
    <string name="guess_count"> guess count</string>
    <string name="s_turn">\'s turn</string>
    <string name="correct">Correct!</string>
    <string name="cold">Cold</string>
    <string name="colder">Colder</string>
    <string name="freezing">Freezing</string>
    <string name="absolute_zero">Absolute zero!</string>
    <string name="warm">Warm</string>
    <string name="warmer">Warmer</string>
    <string name="hot">Hot</string>
    <string name="on_fire">On fire!</string>
    <string name="miss_count">miss count</string>
    <string name="enter_a_single_letter_guess">Enter a single letter guess…</string>
    <string name="incorrect_letters">Incorrect letters:</string>
    <string name="confirm_quit">Press "Home" again to confirm.</string>
    <string name="confirm">Confirm</string>
    <string name="invalid_word">Invalid entry-Enter a single character</string>
    <string name="word_found">Word found!</string>
    <string name="already_guess">This character was already guessed</string>
    <string name="out_of_guesses">You ran out of guesses</string>
    <string name="player1_win">Player 1 won!</string>
    <string name="player2_win">Player 2 won!</string>
    <string name="draw">Draw</string>
    <string name="column_full">This column is full. Pick another.</string>
    <string name="board_full">The board is full with no winner. Draw.</string>
    <string name="must_enter_value">You must enter a value!</string>


</resources>
