<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project01.csc214.project01_simplegames.HotColdActivity">

    <FrameLayout
        android:id="@+id/scoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">
        <fragment
            android:name="project01.csc214.project01_simplegames.ScoreFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/score_fragment"
            tools:layout="@layout/fragment_score"
            />
    </FrameLayout>

    <Button
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_below="@id/scoreboard"
        android:layout_centerHorizontal="true"
        android:onClick="returnHome"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_button"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/user1_guess_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_count"
            android:padding="5sp"
            />
        <TextView
            android:id="@+id/user1_guess_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:paddingEnd="20sp"
            />

        <TextView
            android:id="@+id/user2_guess_name"
            android:paddingStart="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_count"
            android:padding="5sp"
            />
        <TextView
            android:id="@+id/user2_guess_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/guess_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_a_number_between_0_and_20"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textSize="17sp"
            />
        <LinearLayout
            android:id="@+id/turn_notifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/guess_prompt">

            <TextView
                android:id="@+id/turn_notifier_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_1"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/turn_notifier_suffix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_turn"
                android:textSize="20sp"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/hotColdGuessBox"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/guess_hint"
            android:layout_below="@id/turn_notifier"
            android:layout_centerHorizontal="true"
            android:padding="15sp"
            />
        <Button
            android:id="@+id/hotColdConfirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hotColdGuessBox"
            android:layout_centerHorizontal="true"
            android:text="@string/confirm_guess"
            android:onClick="confirmGuess"
            />
        <TextView
            android:id="@+id/hotColdFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hotColdConfirmButton"
            android:layout_centerHorizontal="true"
            android:text="@string/enter_your_guess"
            android:padding="10sp"
            />

    </RelativeLayout>

</RelativeLayout>
