<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project01.csc214.project01_simplegames.ScoreFragment"
    android:background="#cacab4">

    <TextView
        android:id="@+id/current_score_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_score"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:padding="5sp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_score_header"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/user1Display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1"
            android:padding="10sp"
            />

        <TextView
            android:id="@+id/user1ScoreDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:padding="10sp"
            android:paddingEnd="40sp"
            />

        <TextView
            android:id="@+id/user2Display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_2"
            android:padding="10sp"
            android:paddingStart="40sp"
            />
        <TextView
            android:id="@+id/user2ScoreDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:padding="10sp"
            />

    </LinearLayout>
</RelativeLayout>
