<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project01.csc214.project01_simplegames.HangmanActivity">

    <FrameLayout
        android:id="@+id/scoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">
        <fragment
            android:name="project01.csc214.project01_simplegames.ScoreFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/score_fragment"
            tools:layout="@layout/fragment_score"
            />
    </FrameLayout>

    <Button
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_below="@id/scoreboard"
        android:layout_centerHorizontal="true"
        android:onClick="returnHome"
        />

    <LinearLayout
        android:id="@+id/missDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_button"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/user1_guess_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_count"
            android:padding="5sp"
            />
        <TextView
            android:id="@+id/user1_guess_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:paddingEnd="20sp"
            />

        <TextView
            android:id="@+id/user2_guess_name"
            android:paddingStart="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_count"
            android:padding="5sp"
            />
        <TextView
            android:id="@+id/user2_guess_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            />

    </LinearLayout>


</RelativeLayout>
