<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project01.csc214.project01_simplegames.Connect4Activity">

    <FrameLayout
        android:id="@+id/scoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">
        <fragment
            android:name="project01.csc214.project01_simplegames.ScoreFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/score_fragment"
            tools:layout="@layout/fragment_score"
            />
    </FrameLayout>

    <Button
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_below="@id/scoreboard"
        android:layout_centerHorizontal="true"
        android:onClick="returnHome"
        />

    <LinearLayout
        android:id="@+id/turn_notifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/home_button">

        <TextView
            android:id="@+id/turn_notifier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/turn_notifier_suffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_turn"
            android:textSize="20sp"
            />

    </LinearLayout>

    <GridLayout
        android:id="@+id/connect4Board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/turn_notifier"
        android:layout_centerHorizontal="true"
        android:padding="15sp"
        android:rowCount="7"
        android:columnCount="6">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0sp"
            android:src="@mipmap/ic_drop_button_image"
            android:onClick="dropCol0"
            android:layout_row="0"
            android:layout_column="0"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0sp"
            android:src="@mipmap/ic_drop_button_image"
            android:onClick="dropCol1"
            android:layout_row="0"
            android:layout_column="1"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0sp"
            android:src="@mipmap/ic_drop_button_image"
            android:onClick="dropCol2"
            android:layout_row="0"
            android:layout_column="2"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0sp"
            android:src="@mipmap/ic_drop_button_image"
            android:onClick="dropCol3"
            android:layout_row="0"
            android:layout_column="3"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0sp"
            android:src="@mipmap/ic_drop_button_image"
            android:onClick="dropCol4"
            android:layout_row="0"
            android:layout_column="4"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0sp"
            android:src="@mipmap/ic_drop_button_image"
            android:onClick="dropCol5"
            android:layout_row="0"
            android:layout_column="5"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="1"
            android:layout_column="0"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="1"
            android:layout_column="1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="1"
            android:layout_column="2"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="1"
            android:layout_column="3"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="1"
            android:layout_column="4"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="1"
            android:layout_column="5"
            />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="2"
            android:layout_column="0"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="2"
            android:layout_column="1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="2"
            android:layout_column="2"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="2"
            android:layout_column="3"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="2"
            android:layout_column="4"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="2"
            android:layout_column="5"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="3"
            android:layout_column="0"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="3"
            android:layout_column="1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="3"
            android:layout_column="2"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="3"
            android:layout_column="3"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="3"
            android:layout_column="4"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="3"
            android:layout_column="5"
            />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="4"
            android:layout_column="0"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="4"
            android:layout_column="1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="4"
            android:layout_column="2"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="4"
            android:layout_column="3"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="4"
            android:layout_column="4"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="4"
            android:layout_column="5"
            />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="5"
            android:layout_column="0"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="5"
            android:layout_column="1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="5"
            android:layout_column="2"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="5"
            android:layout_column="3"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="5"
            android:layout_column="4"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="5"
            android:layout_column="5"
            />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="6"
            android:layout_column="0"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="6"
            android:layout_column="1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="6"
            android:layout_column="2"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="6"
            android:layout_column="3"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="6"
            android:layout_column="4"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_null_checker"
            android:layout_row="6"
            android:layout_column="5"
            />



    </GridLayout>

</RelativeLayout>
